fixed vertical and horizontal scroll

--- a/css/style.css
+++ b/css/style.css
@@ -116,7 +116,7 @@ html, body {
 .timeline-wrapper {
   width: 100%;
   height: 100%;
-  overflow: hidden;
+  overflow-x: auto; overflow-y: hidden;
   position: relative;
   cursor: grab;
 }
